--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lsim2.github.io/my-app",
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
